--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+Backend/node_modules
+Backend/node_modules/
+Frontend/node_modules
+Frontend/node_modules/
 /.pnp
 .pnp.js
 
@@ -17,7 +20,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
-.eslintcache
+Frontend/.eslintcache
 
 npm-debug.log*
 yarn-debug.log*
