--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,8 +11,8 @@
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
     "framer-motion": ">=3.0.0",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
