--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,35 @@
-# This file is a template, and might need editing before it works on your project.
-include:
-  template: Jobs/Code-Quality.gitlab-ci.yml
+install:
+   stage: install
+   script:
+      - npm install
+   artifacts:
+      name: "artifacts"
+      untracked: true
+      expire_in: 30 mins
+      paths:
+        - .npm/
+        - node_modules/
+
+build:
+   stage: build
+   script:
+      - CI=false npm run build
+   artifacts:
+      paths:
+         - build
+      expire_in: 30 mins
+   dependencies:
+      - install
+
+linting:
+   stage: quality
+   script:
+      - npm run lint
+
+test:unit:
+   stage: quality
+   script:
+      -  npm run test:coverage
+   dependencies:
+      - install
+   coverage: /All files[^|]*\|[^|]*\s+([\d\.]+)/
