--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,35 +1,11 @@
-install:
-   stage: install
-   script:
-      - npm install
-   artifacts:
-      name: "artifacts"
-      untracked: true
-      expire_in: 30 mins
-      paths:
-        - .npm/
-        - node_modules/
-
-build:
-   stage: build
-   script:
-      - CI=false npm run build
-   artifacts:
-      paths:
-         - build
-      expire_in: 30 mins
-   dependencies:
-      - install
-
-linting:
-   stage: quality
-   script:
-      - npm run lint
-
-test:unit:
-   stage: quality
-   script:
-      -  npm run test:coverage
-   dependencies:
-      - install
-   coverage: /All files[^|]*\|[^|]*\s+([\d\.]+)/
+image: node:11.10.1
+ 
+stages:
+    - test
+ 
+run-unit-test:
+    stage: test
+    script:
+        - cd Frontend
+        - npm install
+        - npm test 
