--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "PERI Systems",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
