--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,8 +20,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "start-server-and-test start http-get://localhost:3030 cy:run",
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +41,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cypress": "^6.4.0",
+    "cypress-react-unit-test": "^4.17.2",
+    "start-server-and-test": "^1.12.0"
   }
 }
