--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -42,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@chakra-ui/layout": "^1.3.1",
+    "@chakra-ui/table": "^1.1.1"
   }
 }
