--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@chakra-ui/icons": "^1.0.5",
     "@chakra-ui/layout": "^1.3.1",
     "@chakra-ui/table": "^1.1.1"
   }
