--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1"
   },
+  "prettier": {
+    "tabWidth": 4
+  },
   "dependencies": {
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
