--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,9 @@ test:
     script:
         - cd Frontend
         - npm i cypress
+        - npm i mocha
+        - mocha
         - node -v
         - npm -v
         - npm install
-        - npm run test 
+        # - npm run test 
