--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,3 +20,6 @@ test:
         - npm -v
         - npm install
         - npm run test 
+        - cd ../Backend
+        - npm install
+        - npm run test
