Imported types and react-crud-table

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,9 +12,12 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
+    "@types/jest": "^26.0.20",
+    "@types/mocha": "^8.2.0",
     "axios": "^0.21.1",
     "framer-motion": ">=3.0.0",
     "react": "^17.0.1",
+    "react-crud-table": "^0.3.0",
     "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
