--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "mocha",
+    "test": "mocha --exit",
     "ci-test": "node server.js & npm test"
   },
   "author": "PERI Systems",
