--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,9 @@
     "@testing-library/user-event": "^12.7.1",
     "@types/jest": "^26.0.20",
     "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "axios": "^0.21.1",
     "framer-motion": ">=3.0.0",
     "node-sass": "4.14.1",
@@ -24,6 +27,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-validation": "^3.0.7",
+    "typescript": "^4.1.5",
     "validator": "^13.5.2",
     "wait-on": "^5.2.1",
     "web-vitals": "^0.2.4"
