--- a/Backend/mockCollectionData/projectsCollectionInitialData.json
+++ b/Backend/mockCollectionData/projectsCollectionInitialData.json
@@ -18,6 +18,9 @@
             },
             "designer_id": {
                 "$oid": "6026d7e2e01f86192c9a5789"
+            },
+            "design_checker_id": {
+                "$oid": "6026d7c4e01f86192c9a5785"
             }
         },
         "date_required": {
@@ -62,6 +65,85 @@
                     "$date": "2021-02-02T15:00:00Z"
                 },
                 "value": "Awaiting Customer Approval"
+            },
+            {
+                "_id": {
+                    "$oid": "60361da558cdf53c601c187b"
+                },
+                "time_set": {
+                    "$date": "2021-02-24T09:34:29.220Z"
+                },
+                "value": "Project Complete"
+            }
+        ],
+        "__v": 0
+    },
+    {
+        "_id": {
+            "$oid": "601ab33a2294275198672b7b"
+        },
+        "number": "321",
+        "name": "Bedford Passage",
+        "system": "TRIO",
+        "sector": "Non-Residential",
+        "description": "TRIO Framework to core 11C",
+        "client": "Modebest",
+        "engineers": {
+            "sales_engineer_id": {
+                "$oid": "601a8b773e3205f70dda2f74"
+            },
+            "technical_lead_id": {
+                "$oid": "6026df2436b199338c2ec570"
+            },
+            "designer_id": {
+                "$oid": "6026d7e2e01f86192c9a5789"
+            },
+            "design_checker_id": {
+                "$oid": "6026d7c4e01f86192c9a5785"
+            }
+        },
+        "date_required": {
+            "$date": "2021-03-03T12:00:00Z"
+        },
+        "anticipated_date": {
+            "$date": "2021-03-01T12:00:00Z"
+        },
+        "status": [
+            {
+                "_id": {
+                    "$oid": "601c08dca5dabc0e7ca78ef4"
+                },
+                "time_set": {
+                    "$date": "2021-01-01T12:00:00Z"
+                },
+                "value": "Design Pending​"
+            },
+            {
+                "_id": {
+                    "$oid": "601c08e5a5dabc0e7ca78ef5"
+                },
+                "time_set": {
+                    "$date": "2021-01-05T11:00:00Z"
+                },
+                "value": "Preliminary Design Ongoing"
+            },
+            {
+                "_id": {
+                    "$oid": "601c08efa5dabc0e7ca78ef6"
+                },
+                "time_set": {
+                    "$date": "2021-01-07T08:30:00Z"
+                },
+                "value": "Preliminary Design Complete"
+            },
+            {
+                "_id": {
+                    "$oid": "60361b1258cdf53c601c1879"
+                },
+                "time_set": {
+                    "$date": "2021-02-24T09:23:30.423Z"
+                },
+                "value": "Design Complete"
             }
         ],
         "__v": 0
@@ -85,6 +167,9 @@
             },
             "designer_id": {
                 "$oid": "6026d7c4e01f86192c9a5785"
+            },
+            "design_checker_id": {
+                "$oid": "6026df2436b199338c2ec570"
             }
         },
         "date_required": {
@@ -134,6 +219,9 @@
             },
             "designer_id": {
                 "$oid": "6026d7e2e01f86192c9a5789"
+            },
+            "design_checker_id": {
+                "$oid": "602bd561bab9f445b806b03b"
             }
         },
         "date_required": {
@@ -151,66 +239,71 @@
                     "$date": "2021-02-03T00:00:00Z"
                 },
                 "value": "Design Pending"
-            }
-        ],
-        "__v": 0
-    },
-    {
-        "_id": {
-            "$oid": "601ab33a2294275198672b7b"
-        },
-        "number": "321",
-        "name": "Bedford Passage",
-        "system": "TRIO",
-        "sector": "Non-Residential",
-        "description": "TRIO Framework to core 11C",
-        "client": "Modebest",
-        "engineers": {
-            "sales_engineer_id": {
-                "$oid": "601a8b773e3205f70dda2f74"
-            },
-            "technical_lead_id": {
-                "$oid": "6026df2436b199338c2ec570"
-            },
-            "designer_id": {
-                "$oid": "6026d7e2e01f86192c9a5789"
-            }
-        },
-        "date_required": {
-            "$date": "2021-03-03T12:00:00Z"
-        },
-        "anticipated_date": {
-            "$date": "2021-03-01T12:00:00Z"
-        },
-        "status": [
-            {
-                "_id": {
-                    "$oid": "601c08dca5dabc0e7ca78ef4"
-                },
-                "time_set": {
-                    "$date": "2021-01-01T12:00:00Z"
-                },
-                "value": "Design Pending​"
             },
             {
                 "_id": {
-                    "$oid": "601c08e5a5dabc0e7ca78ef5"
+                    "$oid": "60353e23f5f2fa2fc497643b"
                 },
                 "time_set": {
-                    "$date": "2021-01-05T11:00:00Z"
+                    "$date": "2021-02-23T17:40:51.708Z"
+                },
+                "value": "Design Complete"
+            },
+            {
+                "_id": {
+                    "$oid": "60353e7df5f2fa2fc497643c"
+                },
+                "time_set": {
+                    "$date": "2021-02-23T17:42:21.927Z"
+                },
+                "value": "Detailed Design Ongoing"
+            },
+            {
+                "_id": {
+                    "$oid": "60353eb7f5f2fa2fc497643d"
+                },
+                "time_set": {
+                    "$date": "2021-02-23T17:43:19.513Z"
+                },
+                "value": "Detailed Design Pending​"
+            },
+            {
+                "_id": {
+                    "$oid": "60353edef5f2fa2fc497643e"
+                },
+                "time_set": {
+                    "$date": "2021-02-23T17:43:58.151Z"
+                },
+                "value": "Preliminary Design Complete"
+            },
+            {
+                "_id": {
+                    "$oid": "603541aec895b03b9c03bbff"
+                },
+                "time_set": {
+                    "$date": "2021-02-23T17:55:58.929Z"
+                },
+                "value": "Design Pending"
+            },
+            {
+                "_id": {
+                    "$oid": "603541b6c895b03b9c03bc00"
+                },
+                "time_set": {
+                    "$date": "2021-02-23T17:56:06.636Z"
                 },
                 "value": "Preliminary Design Ongoing"
             },
             {
                 "_id": {
-                    "$oid": "601c08efa5dabc0e7ca78ef6"
+                    "$oid": "603541bac895b03b9c03bc01"
                 },
                 "time_set": {
-                    "$date": "2021-01-07T08:30:00Z"
+                    "$date": "2021-02-23T17:56:10.273Z"
                 },
-                "value": "Preliminary Design Complete"
+                "value": "Design Pending"
             }
         ],
-        "__v": 1
+        "__v": 0
     }
 ]
