--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "axios": "^0.21.1",
+    "chakra-paginator": "^0.6.3",
     "framer-motion": ">=3.0.0",
     "react": "^17.0.1",
     "react-datepicker": "^3.4.1",
