--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "socket.io": "^3.1.0"
