--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,7 @@
     "framer-motion": ">=3.0.0",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
+    "react-async": "^10.0.1",
     "react-crud-table": "^0.3.0",
     "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
