--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
-  },
-  "prettier": {
-    "tabWidth": 4
+    "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.4.18"
   }
 }
