--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,39 +9,26 @@
     "@chakra-ui/table": "^1.1.1",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.7.1",
-    "@types/jest": "^26.0.20",
-    "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "axios": "^0.21.1",
-    "chakra-paginator": "^0.6.3",
-    "framer": "^1.2.25",
+    "email-validator": "^2.0.4",
     "framer-motion": ">=3.0.0",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-async": "^10.0.1",
-    "react-crud-table": "^0.3.0",
     "react-datepicker": "^3.4.1",
-    "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.3",
     "react-validation": "^3.0.7",
     "typescript": "^4.1.5",
-    "validator": "^13.5.2",
-    "wait-on": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "cypress:open": "cypress open",
-    "cy:run": "cypress run",
-    "test": "start-server-and-test start http://localhost:3000 cy:run",
     "mocha-test": "mocha"
   },
   "eslintConfig": {
@@ -63,9 +50,6 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^6.4.0",
-    "cypress-react-unit-test": "^4.17.2",
-    "mocha": "^8.3.0",
-    "start-server-and-test": "^1.12.0"
+    "mocha": "^8.3.0"
   }
 }
