--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,13 +18,11 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "axios": "^0.21.1",
-    "chakra-paginator": "^0.6.3",
     "framer": "^1.2.25",
     "framer-motion": ">=3.0.0",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-async": "^10.0.1",
-    "react-crud-table": "^0.3.0",
     "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -39,8 +37,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "cypress:open": "cypress open",
-    "cy:run": "cypress run",
     "test": "start-server-and-test start http://localhost:3000 cy:run",
     "mocha-test": "mocha"
   },
@@ -63,9 +59,6 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^6.4.0",
-    "cypress-react-unit-test": "^4.17.2",
-    "mocha": "^8.3.0",
-    "start-server-and-test": "^1.12.0"
+    "mocha": "^8.3.0"
   }
 }
