changed id of last project

--- a/Backend/mockCollectionData/projectsCollectionInitialData.json
+++ b/Backend/mockCollectionData/projectsCollectionInitialData.json
@@ -333,7 +333,7 @@
     },
     {
         "_id": {
-            "$oid": "6048e4e8abdcc3d25a586e5f\n"
+            "$oid": "6048e6d7abdcc3d25a586e64"
         },
         "number": "331",
         "name": "A484 Gelligatti",
