--- a/Backend/mockCollectionData/projectsCollectionInitialData.json
+++ b/Backend/mockCollectionData/projectsCollectionInitialData.json
@@ -445,5 +445,82 @@
             }
         ],
         "__v": 1
+    },
+    {
+        "_id": { "$oid": "6048e7b7abdcc3d25a586e68" },
+        "number": "111",
+        "name": "Acton Passage",
+        "system": "TRIO",
+        "sector": "Non-Residential",
+        "description": "TRIO Framework to core 11C",
+        "client": "Modebest",
+        "engineers": {
+            "sales_engineer_id": {
+                "$oid": "60489c2c224afaa395d073bf"
+            },
+            "technical_lead_id": {
+                "$oid": "6026df2436b199338c2ec570"
+            },
+            "designer_id": {
+                "$oid": "6026d7e2e01f86192c9a5789"
+            },
+            "design_checker_id": {
+                "$oid": "6026df2436b199338c2ec570"
+            }
+        },
+        "date_required": {
+            "$date": "2021-03-03T12:00:00.000Z"
+        },
+        "anticipated_date": {
+            "$date": "2021-03-01T12:00:00.000Z"
+        },
+        "status": {
+            "_id": {
+                "$oid": "601c08efa5dabc0e7ca78ef6"
+            },
+            "time_set": {
+                "$date": "2021-01-07T08:30:00.000Z"
+            },
+            "value": "Preliminary Design Complete"
+        },
+        "status_history": [
+            {
+                "_id": {
+                    "$oid": "601c08dca5dabc0e7ca78ef4"
+                },
+                "time_set": {
+                    "$date": "2021-01-01T12:00:00.000Z"
+                },
+                "value": "Design Pending​"
+            },
+            {
+                "_id": {
+                    "$oid": "601c08e5a5dabc0e7ca78ef5"
+                },
+                "time_set": {
+                    "$date": "2021-01-05T11:00:00.000Z"
+                },
+                "value": "Preliminary Design Ongoing"
+            },
+            {
+                "_id": {
+                    "$oid": "601c08efa5dabc0e7ca78ef6"
+                },
+                "time_set": {
+                    "$date": "2021-01-07T08:30:00.000Z"
+                },
+                "value": "Preliminary Design Complete"
+            },
+            {
+                "_id": {
+                    "$oid": "601c08efa5dabc0e7ca78ef7"
+                },
+                "time_set": {
+                    "$date": "2021-01-10T08:30:00.000Z"
+                },
+                "value": "Project Cancelled"
+            }
+        ],
+        "__v": 0
     }
 ]
