--- a/Backend/mockCollectionData/projectsCollectionInitialData.json
+++ b/Backend/mockCollectionData/projectsCollectionInitialData.json
@@ -476,12 +476,12 @@
         },
         "status": {
             "_id": {
-                "$oid": "601c08efa5dabc0e7ca78ef6"
+                "$oid": "601c08efa5dabc0e7ca78ef7"
             },
             "time_set": {
-                "$date": "2021-01-07T08:30:00.000Z"
+                "$date": "2021-01-10T08:30:00.000Z"
             },
-            "value": "Preliminary Design Complete"
+            "value": "Project Cancelled"
         },
         "status_history": [
             {
