--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,8 +22,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
-    "socket.io": "^3.1.0"
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "chai": "^4.3.0",
