--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-validation": "^3.0.7",
+    "recharts": "^2.0.8",
     "typescript": "^4.1.5",
     "validator": "^13.5.2",
     "wait-on": "^5.2.1",
