--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,7 @@
     "framer": "^1.2.25",
     "framer-motion": ">=3.0.0",
     "html2canvas": "^1.0.0-rc.7",
+    "jest-each": "^26.6.2",
     "jspdf": "^2.3.1",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
@@ -35,7 +36,8 @@
     "typescript": "^4.1.5",
     "validator": "^13.5.2",
     "wait-on": "^5.2.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
