--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,9 +13,10 @@ test:
     script:
         - npm set progress=false
         - cd Frontend
+        - npm i mocha -g
         - npm i jest -g
         - npm install
-        - npm run test
+        - npm test
         - cd ../Backend
         - npm install
         - npm run test
