--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -42,8 +42,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "test": "jest",
     "eject": "react-scripts eject",
-    "test": "start-server-and-test start http://localhost:3000 cy:run",
     "mocha-test": "mocha"
   },
   "eslintConfig": {
