--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,7 +19,7 @@
     "@types/react-dom": "^17.0.1",
     "axios": "^0.21.1",
     "framer": "^1.2.25",
-    "framer-motion": ">=3.0.0",
+    "framer-motion": "^3.10.6",
     "html2canvas": "^1.0.0-rc.7",
     "jest-each": "^26.6.2",
     "jspdf": "^2.3.1",
@@ -35,7 +35,7 @@
     "recharts": "^2.0.8",
     "typescript": "^4.1.5",
     "validator": "^13.5.2",
-    "wait-on": "^5.2.1",
+    "wait-on": "^5.3.0",
     "web-vitals": "^0.2.4",
     "yarn": "^1.22.10"
   },
