--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,7 +19,7 @@
     "@types/react-dom": "^17.0.1",
     "axios": "^0.21.1",
     "framer": "^1.2.25",
-    "framer-motion": ">=3.0.0",
+    "framer-motion": "^3.10.6",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-async": "^10.0.1",
@@ -30,6 +30,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-validation": "^3.0.7",
+    "superagent": "^6.1.0",
     "typescript": "^4.1.5",
     "validator": "^13.5.2",
     "wait-on": "^5.2.1",
